# AstraAnt

./: .gitignore  CLAUDE.md  HOBBYIST_BIOLEACHING_GUIDE.md  MISSION_ROADMAP.md  PITCH_PLAN.md  README.md  USAGE.md  ant-swarm-simulator-prompt.md  pyproject.toml
.claude/: settings.local.json
astraant/: __init__.py  __main__.py  bioreactor.py  bootstrap_sim.py  catalog.py  cli.py  composition.py  configs.py  dashboard.py  deposition_sim.py  endgame.py  feasibility.py  giant_machines.py  launch_planner.py  link_budget.py  manufacturing.py  mission_economics.py  mission_planner.py  model_builder.py  nautilus_mechanics.py  orbits.py  phase2.py  placement.py  power_budget.py  price_tracker.py  readiness.py  reality_check.py  relay_systems.py  scad_generator.py  scaling.py  seed_bom.py  sensitivity.py  sousvide_sim.py  trajectory.py  trajectory_2030.py  wire_factory.py  wiring.py
catalog/: SCHEMA.md  equipment_specs.yaml
references/: README.md
scad/: PRINT_GUIDE.md  bit3_thruster.py  bit3_thruster.step  cargo_gripper.scad  drill_head.scad  foot_pad.scad  mothership.scad  mothership_assembly.py  nautilus_station.scad  paste_nozzle.scad  pod_scaffold.scad  printer_bot.scad  printer_bot_assembly.py  printer_bot_chassis.step  printer_bot_chassis.stl  printer_bot_electronics.stl  printer_bot_printhead.stl  sampling_probe.scad  scoop_head.scad  seed_capture.scad  seed_mothership.scad  servo_horn_adapter.scad  solar_panel_deploy.py  solar_panel_deployed.step  solar_panel_stowed.step  thermal_rake.scad  uhf_antenna.py  uhf_antenna.step  worker_ant_assembly.py  (+3 more)
(+221 files in other folders)
